--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,7 @@
 {
-  "name": "Claude Code UI",
-  "short_name": "Claude UI",
-  "description": "Claude Code UI web application",
+  "name": "AEMplify",
+  "short_name": "AEMplify",
+  "description": "AEMplify - AI-powered AEM development assistant",
   "start_url": "/",
   "display": "standalone",
   "background_color": "#ffffff",
